// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review displays organization/employer information 1`] = `
<ReviewRow
  data-test="org-name-row"
  label="Organization"
  level="2"
  noBorder={true}
>
  <div
    className="margin-bottom-2 padding-bottom-2 display-flex flex-justify"
  >
    <div
      className="margin-right-2"
    >
      <Heading
        className="margin-bottom-1"
        level="2"
        size="4"
      >
        <h2
          className="margin-bottom-1 font-heading-xs text-bold"
        >
          Organization
        </h2>
      </Heading>
      Work Inc.
    </div>
  </div>
</ReviewRow>
`;

exports[`Review displays organization/employer information 2`] = `
<ReviewRow
  data-test="ein-row"
  label="Employer ID number (EIN)"
  level="2"
  noBorder={true}
>
  <div
    className="margin-bottom-2 padding-bottom-2 display-flex flex-justify"
  >
    <div
      className="margin-right-2"
    >
      <Heading
        className="margin-bottom-1"
        level="2"
        size="4"
      >
        <h2
          className="margin-bottom-1 font-heading-xs text-bold"
        >
          Employer ID number (EIN)
        </h2>
      </Heading>
      12-3456789
    </div>
  </div>
</ReviewRow>
`;
